syntax = "proto3";

package sourcenetwork.acp_core;

import "google/protobuf/timestamp.proto";
import "sourcenetwork/acp_core/principal.proto";

option go_package = "github.com/sourcenetwork/acp_core/pkg/types";

// RecorMetadata contains system defined data containing
// data set during a record's creation
message RecordMetadata {
    Principal creator = 1;
    google.protobuf.Timestamp creation_ts = 2;
    SuppliedMetadata supplied = 3;
}

// SuppliedMetadata models arbitrary satalite data supplied
// by callers which contain metadata about a record
message SuppliedMetadata {
    map<string,string> attributes = 1; 
    bytes blob = 2;
}